<resources>
    <string name="app_name">racketRivals</string>
    <string name="title_activity_splash_screen">Splash_Screen</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_log_in_screen">LogInScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_requests">Requests</string>
    <string name="home">Home</string>
    <string name="leader_board">Leader board</string>
    <string name="match_history">History</string>
    <string name="create_match">Create Match</string>
</resources>